feat token jwt FindAllProducts and create product added to swagger
